manifests/rocketchat-server.yaml
---
# Source: rocketchat/templates/microservices-account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-account
  namespace: rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
      app.kubernetes.io/name: rocketchat-account
      app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/microservices-authorization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-authorization
  namespace: rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat-authorization
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/microservices-ddp-streamer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-ddp-streamer
  namespace: rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    targetPort: 3000
    port: 3000
    protocol: TCP
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat-ddp-streamer
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/microservices-presence-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-presence
  namespace: rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat-presence
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/microservices-stream-hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-stream-hub
  namespace: rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat-stream-hub
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-rocketchat
  namespace: rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9100"
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: metrics
    port: 9100
    targetPort: 9100
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-rocketchat-monolith-ms-metrics
  namespace: rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: moleculer-metrics
    port: 9458
    targetPort: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-rocketchat
  namespace: rocketchat
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat
      app.kubernetes.io/instance: rocketchat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat
        app.kubernetes.io/instance: rocketchat
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
      serviceAccountName: rocketchat-rocketchat
      containers:
      - name: rocketchat
        image: "registry.rocket.chat/rocketchat/rocket.chat:7.10.0"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 999
        ports:
        - name: http
          containerPort: 3000
        - name: metrics
          containerPort: 9100
        - name: ms-metrics
          containerPort: 9458
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: rocket-data
          mountPath: /app/uploads
        - name: tmp
          mountPath: /tmp          
      volumes:
      - name: tmp
        emptyDir: {}
      - name: rocket-data
        persistentVolumeClaim:
          claimName: rocketchat-rocketchat
---
# Source: rocketchat/templates/microservices-account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-account
  namespace: rocketchat
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-account
      app.kubernetes.io/instance: rocketchat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-account
        app.kubernetes.io/instance: rocketchat
    spec:
      containers:
      - name: account-service
        image: "rocketchat/account-service:7.10.0"
        ports:
        - name: ms-metrics
          containerPort: 9458
---
# Source: rocketchat/templates/microservices-authorization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-authorization
  namespace: rocketchat
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-authorization
      app.kubernetes.io/instance: rocketchat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-authorization
        app.kubernetes.io/instance: rocketchat
    spec:
      containers:
      - name: authorization-service
        image: "rocketchat/authorization-service:7.10.0"
        ports:
        - name: ms-metrics
          containerPort: 9458
---
# Source: rocketchat/templates/microservices-ddp-streamer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-ddp-streamer
  namespace: rocketchat
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-ddp-streamer
      app.kubernetes.io/instance: rocketchat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-ddp-streamer
        app.kubernetes.io/instance: rocketchat
    spec:
      containers:
      - name: ddp-streamer
        image: "rocketchat/ddp-streamer-service:7.10.0"
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        - name: ms-metrics
          containerPort: 9458
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 2
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
---
# Source: rocketchat/templates/microservices-presence-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-presence
  namespace: rocketchat
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-presence
      app.kubernetes.io/instance: rocketchat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-presence
        app.kubernetes.io/instance: rocketchat
    spec:
      containers:
      - name: presence-service
        image: "rocketchat/presence-service:7.10.0"
        ports:
        - name: ms-metrics
          containerPort: 9458
---
# Source: rocketchat/templates/microservices-stream-hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-stream-hub
  namespace: rocketchat
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-stream-hub
      app.kubernetes.io/instance: rocketchat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-stream-hub
        app.kubernetes.io/instance: rocketchat
    spec:
      containers:
      - name: stream-hub
        image: "rocketchat/stream-hub-service:7.10.0"
        ports:
        - name: ms-metrics
          containerPort: 9458
---
# Source: rocketchat/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocketchat-rocketchat
  namespace: rocketchat
  annotations:
    cert-manager.io/cluster-issuer: production-cert-issuer
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k8.canepro.me
      secretName: rocketchat-tls
  rules:
  - host: k8.canepro.me
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: rocketchat-rocketchat
            port:
              name: http
      - path: /sockjs
        pathType: Prefix
        backend:
          service:
            name: rocketchat-ddp-streamer
            port:
              name: http
      - path: /websocket
        pathType: Prefix
        backend:
          service:
            name: rocketchat-ddp-streamer
            port:
              name: http
